--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <head>
         <body>
             <h1>Qualifications Summary for the Role of a Business Analyst</h1>
-            <img src='pl_frequency_ranks.PNG' width="700">
-            <img src='ts_frequency_ranks.PNG' width="700">
-            <img src='ss_frequency_ranks.PNG' width="700">
-            <img src='jt_frequency_ranks.PNG' width="700">
-            <img src='pl_pie_chart.PNG' width="700">
-            <img src='pl_donut_chart.PNG' width="700">
-            <img src='hc_frequency_ranks.PNG' width="700">
-            <img src='pl_s_association.PNG' width="700">
-            <img src='ts_s_association.PNG' width="700">
-            <img src='ss_s_association.PNG' width="700">
+            <img src='pl_frequency_ranks.png' width="700">
+            <img src='ts_frequency_ranks.png' width="700">
+            <img src='ss_frequency_ranks.png' width="700">
+            <img src='jt_frequency_ranks.png' width="700">
+            <img src='pl_pie_chart.png' width="700">
+            <img src='pl_donut_chart.png' width="700">
+            <img src='hc_frequency_ranks.png' width="700">
+            <img src='pl_s_association.png' width="700">
+            <img src='ts_s_association.png' width="700">
+            <img src='ss_s_association.png' width="700">
             <h2>All Data Pertaining to Each Job</h2>
             <table border="1" class="dataframe">
   <thead>
