--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <head>
         <body>
             <h1>Qualifications Summary for the Role of a Business Analyst</h1>
-            <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/pl_frequency_ranks.PNG' width="700">
+            <img src='jds_images/pl_frequency_ranks.png' width="700">
             <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/ts_frequency_ranks.PNG' width="700">
             <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/ss_frequency_ranks.PNG' width="700">
             <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/jt_frequency_ranks.PNG' width="700">
