--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <body>
             <h1>Qualifications Summary for the Role of a Business Analyst</h1>
             <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/pl_frequency_ranks.png' width="700">
-            <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/ts_frequency_ranks.PNG' width="700">
-            <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/ss_frequency_ranks.PNG' width="700">
+            <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/ts_frequency_ranks.png' width="700">
+            <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/ss_frequency_ranks.png' width="700">
             <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/jt_frequency_ranks.png' width="700">
             <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/pl_pie_chart.png' width="700">
             <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/pl_donut_chart.png' width="700">
             <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/hc_frequency_ranks.png' width="700">
             <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/pl_s_association.png' width="700">
-            <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/ts_s_association.PNG' width="700">
-            <img src='/Users/azizalkorey/PycharmProjects/jobDescriptionDataVisualizations.py/ss_s_association.PNG' width="700">
+            <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/ts_s_association.png' width="700">
+            <img src='https://raw.githubusercontent.com/aalkorey/aalkorey.github.io/main/jds-images/ss_s_association.png' width="700">
             <h2>All Data Pertaining to Each Job</h2>
             <table border="1" class="dataframe">
   <thead>
